--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,20 @@
 @import-normalize;
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto+Slab:wght@500&display=swap');
+
 
 .container {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     display: flex;
     justify-content: space-between;
-    h1,h2,h3,h4,h5 {
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
         letter-spacing: 0.1rem;
     }
 
 }
+
