--- a/src/components/mainView/inventoryForm/InventoryForm.module.scss
+++ b/src/components/mainView/inventoryForm/InventoryForm.module.scss
@@ -116,7 +116,9 @@
                     opacity: 1;
                     box-shadow: 0px 0px 200px -38px rgba(0, 0, 0, 0.80),
                         1px 0px 38px -7px rgba(0, 0, 0, 0.19);
-                    transform: translateY(0)
+                    transform: translateY(0);
+
+                    transition: opacity .15s ease, transform .25s ease;
                 }
             }
         }
@@ -131,7 +133,6 @@
             padding: .5rem 1rem;
             margin-left: -1rem;
             z-index: 1;
-            transition: opacity .15s ease, transform .25s ease;
             transform: translateY(1rem);
 
             @media only screen and (max-width : 768px) {
